--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,21 +1,41 @@
 FROM ruby:3.3.6
 ENV LANG C.UTF-8
 ENV TZ Asia/Tokyo
-RUN apt-get update -qq \
-&& apt-get install -y ca-certificates curl gnupg \
-&& mkdir -p /etc/apt/keyrings \
-&& curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
-&& NODE_MAJOR=20 \
-&& echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list \
-&& wget --quiet -O - /tmp/pubkey.gpg https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
-&& echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-RUN apt-get update -qq && apt-get install -y build-essential libpq-dev nodejs yarn vim
-RUN mkdir /app
-WORKDIR /app
-RUN gem install bundler
-COPY Gemfile Gemfile.lock ./
-RUN bundle install
 
-COPY package.json ./
-RUN npm install
+# 必要なパッケージのインストール
+RUN apt-get update -qq && \
+    apt-get install -y ca-certificates curl gnupg build-essential libpq-dev vim && \
+    mkdir -p /etc/apt/keyrings && \
+    curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
+
+# Node.jsのセットアップ
+RUN NODE_MAJOR=20 && \
+    echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list && \
+    apt-get update && apt-get install -y nodejs
+
+# Yarnのインストール
+RUN npm install -g yarn
+
+# アプリケーションディレクトリの作成
+WORKDIR /app
+
+# GemfileとGemfile.lockをコピー
+COPY Gemfile Gemfile.lock ./
+
+# Bundlerの設定とGemのインストール
+RUN gem install bundler && \
+    bundle config set --local without '' && \
+    bundle install
+
+# package.jsonをコピーしてnpm packagesをインストール
+COPY package.json yarn.lock ./
+RUN yarn install
+
+# アプリケーションコードをコピー
+COPY . .
+
+# 必要なnpmパッケージをグローバルにインストール
 RUN npm install -g esbuild tailwindcss
+
+# ポートの公開
+EXPOSE 3000
