--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@hotwired/turbo-rails": "^8.0.0",
     "apexcharts": "^3.45.0",
     "daisyui": "^4.7.2",
-    "postcss": "^8.5.1"
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.1"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets --format=esm",
