--- a/compose.yml
+++ b/compose.yml
@@ -48,6 +48,7 @@ services:
       REDIS_URL: redis://redis:6379/0
       RAILS_LIVE_RELOAD_ENABLED: 'true'
       RAILS_LIVE_RELOAD_HOST: '0.0.0.0'
+      RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
     env_file:
       - .env
     ports:
